# kvmi-rs

./: .cirrus.yml  .travis.yml  COPYING  Cargo.toml  LICENSE-MIT  README.md
ci/: Dockerfile
kvmi/: Cargo.toml  build.rs  wrapper.h
kvmi-semantic/: Cargo.toml
kvmi-semantic/examples/: bp.rs  get_ptb.rs
kvmi-semantic/src/: event.rs  lib.rs  memory.rs  tests.rs  tracing.rs
kvmi-semantic/src/memory/: address_space.rs  handle_table.rs  list.rs  modules.rs  process.rs
kvmi-semantic/src/memory/address_space/: cache.rs  tests.rs
kvmi-semantic/src/tracing/: functions.rs
kvmi/examples/: kvmi-test.rs
kvmi/include/linux/: kvmi.h
kvmi/src/: c_ffi.rs  lib.rs  message.rs  net.rs  utils.rs
kvmi/src/message/: opaque.rs  tests.rs
observer/: Cargo.toml  build.rs
observer/schema/: kvmi.capnp
observer/src/: collect.rs  graph.rs  lib.rs  rpc.rs
observer/src/collect/: bp_handlers.rs
observer/src/collect/bp_handlers/: file.rs  process.rs  tcp.rs
observer/src/graph/: construction.rs  entities.rs
observer/src/graph/construction/: alarms.rs  analysis.rs  propagation.rs  provenance.rs  tests.rs
observer/src/rpc/: collector.rs  observer.rs
observer/src/web/: consume.rs
observer/src/web/consume/: log.rs
