[package]
name = "kvmi-semantic"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"

[dependencies]
kvmi = { path = "../kvmi" }
async-std = "1.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "0.6"
env_logger = "0.7"
