[package]
name = "kvmi-semantic"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"

[dependencies]
kvmi = { path = "../kvmi" }
async-std = {version = "1.2", features = ["unstable", "attributes"]}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
futures = "0.3"
cfg-if = "0.1"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std", "perf"]

[dev-dependencies]
pretty_assertions = "0.6"
env_logger = "0.7"
structopt = "0.3"
mockall = "0.5"
signal-hook = "0.1"
