[package]
name = "kvmi"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.52"

[dependencies]
nix = "0.16"
exitcode = "1.1"
log = "0.4"
mio = "0.6"
libc = "0.2"
async-std = {version = "1.4", features = ["unstable"]}
futures = "0.3"

[dev-dependencies]
env_logger = "0.7"
pretty_assertions = "0.6"
rand = "0.7"
rand_pcg = "0.2"
