[package]
name = "kvmi"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.54"

[dependencies]
nix = "0.17"
exitcode = "1.1"
log = "0.4"
libc = "0.2"
async-std = { version = "1.6", features = ["unstable"] }
futures = "0.3"
smol = "0.1"

[dev-dependencies]
env_logger = "0.7"
pretty_assertions = "0.6"
rand = "0.7"
rand_pcg = "0.2"
