[package]
name = "observer"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
kvmi-semantic = { path = "../kvmi-semantic" }
structopt = "0.3"
exitcode = "1.1"

# See https://github.com/async-rs/async-std/issues/644
#
# TODO: switch to a released version of async-std
# when the new executor is ready
async-std = { git = "https://github.com/async-rs/async-std", branch = "new-scheduler", features = ["unstable"] }

futures = "0.3"
log = "0.4"
capnp = "0.11"
capnp-rpc = "0.11"
signal-hook = "0.1"
serde_json = "1.0"
env_logger = "0.7"

[build-dependencies]
capnpc = "0.11"
