[package]
name = "observer"
version = "0.1.0"
authors = ["Jinyi Xian <kylerky@live.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
kvmi-semantic = { path = "../kvmi-semantic" }
structopt = "0.3"
exitcode = "1.1"

async-std = { version = "1.6", features = ["unstable"] }
smol = "0.1"

futures = "0.3"
log = "0.4"
capnp = "0.13"
capnp-rpc = "0.13"
signal-hook = "0.1"
serde_json = "1.0"
env_logger = "0.7"
petgraph = "0.5"
regex = "1.3"

[build-dependencies]
capnpc = "0.13"

[dev-dependencies]
pretty_assertions = "0.6"
